[gd_scene load_steps=6 format=2]

[ext_resource path="res://GFX/HUD/Pausa/sprite_0.png" type="Texture" id=1]
[ext_resource path="res://GFX/HUD/minimap/sprite_0.png" type="Texture" id=2]
[ext_resource path="res://Scenes/GUI/MiniMap.gd" type="Script" id=3]
[ext_resource path="res://fonts/YOZAKURA-Regular.otf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 60
use_filter = true
font_data = ExtResource( 4 )

[node name="MiniMap" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 11.3089
margin_top = -36.403
margin_right = 1011.31
margin_bottom = 583.597
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = 323.416
margin_top = 0.863586
margin_right = 823.416
margin_bottom = 500.864
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect1" type="ColorRect" parent="."]
visible = false
margin_left = 345.166
margin_top = 301.424
margin_right = 449.166
margin_bottom = 331.424
color = Color( 1, 0.796078, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
margin_left = 503.868
margin_top = 299.507
margin_right = 578.868
margin_bottom = 330.507
color = Color( 1, 0.796078, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="."]
margin_left = 611.583
margin_top = 299.417
margin_right = 648.583
margin_bottom = 330.417
color = Color( 1, 0.796078, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect4" type="ColorRect" parent="."]
margin_left = 596.559
margin_top = 296.059
margin_right = 656.559
margin_bottom = 336.059
color = Color( 1, 0.894118, 0.552941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect5" type="ColorRect" parent="."]
margin_left = 470.49
margin_top = 294.925
margin_right = 597.49
margin_bottom = 334.925
color = Color( 1, 0.894118, 0.552941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 446.215
margin_top = 128.438
margin_right = 521.215
margin_bottom = 201.438
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Map"
